--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-easy-crop": "^4.4.0",
     "react-icons": "^4.4.0",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^6.3.0",
