--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tippyjs/react": "^4.2.6",
     "antd": "^4.20.4",
     "js-cookie": "^3.0.1",
+    "less": "^4.1.3",
     "normalize-scss": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
