--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "gologram",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://islamxm.github.io/gologram-pr/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -31,9 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
