--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
     "antd": "^4.20.4",
+    "antd-img-crop": "^4.2.3",
     "js-cookie": "^3.0.1",
     "less": "^4.1.3",
     "normalize-scss": "^7.0.1",
@@ -16,13 +17,14 @@
     "react-dom": "^18.1.0",
     "react-easy-crop": "^4.4.0",
     "react-icons": "^4.4.0",
+    "react-image-filter": "^0.1.2",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-tippy": "^1.4.0",
     "sass": "^1.51.0",
     "serve": "^13.0.2",
-    "swiper": "^8.1.4",
+    "swiper": "^8.2.6",
     "uninstall": "0.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -51,7 +53,6 @@
     ]
   },
   "devDependencies": {
-    "express": "^4.18.1",
     "express-favicon": "^2.0.1",
     "formik": "^2.2.9",
     "path": "^0.12.7",
