--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tippyjs/react": "^4.2.6",
     "antd": "^4.20.4",
     "antd-img-crop": "^4.2.3",
+    "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
     "less": "^4.1.3",
     "normalize-scss": "^7.0.1",
