--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
     "less": "^4.1.3",
+    "moment-timezone": "^0.5.34",
     "normalize-scss": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
@@ -19,6 +20,7 @@
     "react-easy-crop": "^4.4.0",
     "react-icons": "^4.4.0",
     "react-image-filter": "^0.1.2",
+    "react-moment": "^1.1.2",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
