--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.3",
     "react-tippy": "^1.4.0",
     "sass": "^1.51.0",
     "serve": "^13.0.2",
